# AudioSync

./: README.md
.github/workflows/: Build.yml
AndroidClient/: build.gradle  settings.gradle
AndroidClient/app/: build.gradle  proguard-rules.pro
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/cpp/: CMakeLists.txt  native-lib.c
AndroidClient/app/src/main/java/com/audiosync/app/: MainActivity.java
WindowsServer/: CMakeLists.txt  main.c
